--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -962,9 +962,8 @@ a {
 		padding: 3rem;
 	} */
 	.main_solution_content h1 {
-		/* font-size: 22px; */
-		font-size: 20px;
-	}
+        font-size: 24px;
+    }
 	.main_solution_content p {
 		font-size: 16px;
 	}
@@ -1359,6 +1358,16 @@ a {
 	.footer_top .card .card_body {
 		margin-bottom: 1.5rem;
 	}
+	
+}
+@media (max-width:576px){
+	.main_Solution_bg6 .card_wrapper{
+		padding-left: 2rem;
+		padding-right: 2rem;
+	}
+	.main_solution_content h1 {
+        font-size: 20px;
+    }
 }
 
 
