--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2539,6 +2539,113 @@ a {
 }
 /* blogs page end */
 
+
+/* blog details page */
+.blog_details_post_header{
+	padding:22px 0 20px;
+}
+.blog_details_post_header .heading_badge{
+	font-size: 20px;
+	line-height: 34px;
+	color:#313138;
+}
+
+.blog_details_post_header .heading{
+	font-size: 64px;
+	line-height:100%;
+	color:#313138;
+	margin:16px 0;
+}
+.blog_details_post_header .publish_Date{
+	font-size: 0.875rem;
+	color:#313138
+}
+.feature_image{
+	margin: 2.5rem 0;
+}
+.post_container .containt p{
+	color:#313138;
+	line-height: 150%;;
+}
+.post_container .containt p .heighlight_text{
+	color:#E12B3E;
+}
+.post_container .containt ul li{
+	color:#313138;
+}
+.blog_details_card{
+	border-radius: 16px 16px 0 0 !important;
+	border: none !important;
+	outline: none;
+	overflow: hidden;
+}
+.blog_details_card .card-title{
+	font-size: 18px;
+}
+.blog_details_card .date-time {
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    color: #313138;
+    text-align: left;
+    margin-top: 12px;
+}
+@media (min-width: 992px) and (max-width:1199px) {
+	
+	.blog_details_post_header .heading {
+		font-size: 55px;
+	}
+	.feature_image {
+		margin: 1.5rem 0;
+	}
+	.blog_details_card .card-title {
+		font-size: 15px;
+	}
+	.blog_details_card .date-time {
+		font-size: 13px;
+	}
+}
+
+/* Tablets (768px–991px) */
+@media (min-width: 768px) and (max-width: 991px){
+	.blog_details_post_header .heading {
+		font-size: 40px;
+	}
+	.feature_image {
+		margin: 1.5rem 0;
+	}
+}
+
+@media (max-width: 768px){
+	.breadcrumb-wrapper .breadcrumb .breadcrumb-item{
+		font-size: 12px;
+    	vertical-align: text-top;
+	}
+	.breadcrumb-wrapper .breadcrumb-item{
+		font-size: 12px;
+	}
+	.breadcrumb .breadcrumb-item + .breadcrumb-item::before {
+		width: 16px;
+		height: 16px;
+	}
+	.blog_details_post_header .heading {
+		font-size: 27px;
+	}
+	.blog_details_post_header .heading_badge {
+		font-size: 14px;
+	}
+	.feature_image {
+		margin: 0.5rem 0;
+	}
+	.blog_details_post_header {
+		padding: 10px 0 10px;
+	}
+	
+}
+
+/* end blog details page */
 /* home */
 .home_hero .text_left h1{
 	font-size: 4.5rem;
